added feature to push new employee to empData array

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Salary Calculator</h1>
+    <h2>Add Employees</h2>
     <section id="emp-inputs">
-        <h2>Add Employees</h2>
         <input id="first-name" type="text" placeholder="First Name" >
         <input id="last-name" type="text" placeholder="Last Name" >
         <input id="id" type="number" placeholder="ID" >
@@ -21,8 +21,8 @@
     </section>
     <button id="emp-submit">Submit</button>
     <!-- Add input data here -->
-    <section id="existing-emp">
-        <h2>Employees</h2>
+    <h2>Employees</h2>
+    <section>
         <table id="emp-table">
             <tr>
                 <th>First Name</th>
