completed base challenge

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <!-- Add employees here! -->
         </table>
     </section>
-    
+    <h2 id="total-monthly-cost"></h2>
 </body>
 </html>
