--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
     <title>Salary Calculator</title>
@@ -11,7 +12,7 @@
 
 <body>
     <h1>Salary Calculator</h1>
-    <h2>Add Employees</h2>
+    <h2>Add Employee</h2>
     <section id="emp-inputs">
         <input id="first-name" type="text" placeholder="First Name" >
         <input id="last-name" type="text" placeholder="Last Name" >
